# medlit-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_tsvector.py  0003_add_synthesis_tables.py  0004_add_max_results_to_queries.py  0004_widen_pico_varchar_columns.py  0005_widen_pico_p_value.py  0006_add_max_results_to_queries.py
dashboard/: Dockerfile  api_client.py  app.py  auth.py  theme.py
dashboard/pages/: 1_Home.py  2_Queries.py  3_Articles.py  4_Search.py  5_Syntheses.py  6_Pipeline.py
scripts/: reset_failed_articles.py
src/agents/: embedder.py  extractor.py  monitor.py  orchestrator.py  synthesizer.py
src/api/: dependencies.py  middleware.py
src/core/: config.py  database.py  logging.py  metrics.py
src/models/: __init__.py  article.py  article_embedding.py  clinical_query.py  evidence_synthesis.py  pico_extraction.py  pipeline.py
src/services/: embedding_service.py  gemini_client.py  notifier.py  pico_prompt.py  pubmed_client.py  scheduler.py  synthesis_prompt.py
tests/: conftest.py  test_api_articles.py  test_api_pipeline.py  test_api_queries.py  test_api_search.py  test_api_syntheses.py  test_embedding_agent.py  test_embedding_service.py  test_extractor.py  test_logging.py  test_metrics.py  test_monitor_agent.py  test_notifier.py  test_orchestrator.py  test_pubmed_client.py  test_scheduler.py  test_synthesis_prompt.py  test_synthesizer.py
(+10 files in other folders)
